# speaker-detection-recognition

./: .gitignore  LICENSE  Readme.md  THIRD-PARTY-LICENSES  applying_a_pipeline.ipynb  example.ipynb  pyproject.toml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
src/: pyannote_person_detector.py
src/pyannote_clf/: pyannote_offline_config.yaml
src/tools/: audio_files.py  logger_config.py  paths_files.py  utils.py
